an attempt to fix the horizontal view on mobile devices

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -78,7 +78,7 @@
   }
 
   &__contact {
-    margin-top: 48px;
+    margin: 48px 0 40%;
 
     display: flex;
     flex-direction: column;
